--- a/_posts/2022-07-14-FENS.md
+++ b/_posts/2022-07-14-FENS.md
@@ -1,5 +1,5 @@
 ---
-layout: pos
+layout: post
 title: Conformational Changes in Pigeon Cryptochrome 4
 excerpt: "Poster Presentation at the FENS 2022, Paris, France"
 theme: simple
@@ -9,5 +9,4 @@ category: presentation
 ---
 
 <b>Abstract</b><br>
-
 We presented a result-oriented overview of the paper "Exploring Post-activation Conformational Changes in Pigeon Cryptochrome 4" with a focus on the so-called phosphate-binding loop. We demonstrated the need for replica simulations to achieve statistically reproducable results.
