hopefully fixed posts now

--- a/_posts/2022-07-20-EPJD.md
+++ b/_posts/2022-07-20-EPJD.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The same, but different, but still the same: structural and dynamical differences of neutrophil elastase and cathepsin G
+title: "The same, but different, but still the same: structural and dynamical differences of neutrophil elastase and cathepsin G"
 excerpt: "Fabian Schuhmann, Xiangyin Tan, Luca Gerhards, Heloisa N. Bordallo, Ilia A. Solov'yov, The European Physical Journal D, 76, 126, (2022)"
 tags: [publication]
 comments: false
