--- a/_posts/2022-07-14-FENS.md
+++ b/_posts/2022-07-14-FENS.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Conformational Changes in Pigeon Cryptochrome 4
-excerpt: "Poster Presentation at the FENS 2022, Paris, France"
+excerpt: "Poster presentation at the FENS 2022, Paris, France"
 theme: simple
 transition: convex
 tags: [presentation]
