liked the layout changes for presentations, changed for other posts

--- a/_posts/2022-07-14-FENS.md
+++ b/_posts/2022-07-14-FENS.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Conformational Changes in Pigeon Cryptochrome 4
-excerpt: "Poster presentation at the FENS 2022, Paris, France"
+excerpt: Conformational Changes in Pigeon Cryptochrome 4
+title: "Poster presentation at the FENS 2022, Paris, France"
 theme: simple
 transition: convex
 tags: [presentation]
