--- a/_posts/2022-10-28-ISBUC.md
+++ b/_posts/2022-10-28-ISBUC.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "The same, but different, but still the same: structural and dynamical differences of neutrophil elastase and cathepsin G" 
-excerpt: "Poster presentation at the ISBUC Symposium in Copenhagen, Denmark"
+excerpt: "The same, but different, but still the same: structural and dynamical differences of neutrophil elastase and cathepsin G" 
+title: "Poster presentation at the ISBUC Symposium in Copenhagen, Denmark"
 tags: [presentation]
 category: presentation
 ---
