--- a/_posts/2022-09-20-ECMTB.md
+++ b/_posts/2022-09-20-ECMTB.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "The same, but different, but still the same: structural and dynamical differences of neutrophil elastase and cathepsin G" 
-excerpt: "Poster presentation at the ECMTB 2022 in Heidelberg, Germany"
+excerpt: "The same, but different, but still the same: structural and dynamical differences of neutrophil elastase and cathepsin G" 
+title: "Poster presentation at the ECMTB 2022 in Heidelberg, Germany"
 tags: [presentation]
 category: presentation
 ---
