--- a/_posts/2022-12-02-JACS.md
+++ b/_posts/2022-12-02-JACS.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Effects of Dynamical Degrees of Freedom on Magnetic Compass Sensitivity: A Comparison of Plant and Avian Cryptochromes"
-excerpt: "Gesa Grüning, siu Ying Wong, Luca Gerhards, Fabian Schuhmann, Daniel R. Kattnig, P.J. Hore, Ilia A. Solov'yov, Journal of the American Chemical Society, 144, 22902-22914, (2022)"
+excerpt: "Gesa Grüning, Siu Ying Wong, Luca Gerhards, Fabian Schuhmann, Daniel R. Kattnig, P.J. Hore, Ilia A. Solov'yov, Journal of the American Chemical Society, 144, 22902-22914, (2022)"
 tags: [publication]
 comments: false
 category: blog
