--- a/404.md
+++ b/404.md
@@ -6,7 +6,9 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, but the page you were trying to view does not exist. If this is a surprise to you, please send a message to Fabian Schuhmann. Contacting options are located in the left bar.
+
+Perhaps you can try searching for it below.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
