updated alise reference

--- a/publications/_posts/2023-11-20-ALISE.md
+++ b/publications/_posts/2023-11-20-ALISE.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 title: "Introducing the Automated Ligand Searcher"
-excerpt: "Luise Jacobsen, Jonathan Hungerland, Vladimir Bačić, Luca Gerads, Fabian Schuhmann, Ilia A. Solov'yov, Journal of Chemical Information and Modeling, XXXX,XXX,XXX-XXX, (2023)"
+excerpt: "Luise Jacobsen, Jonathan Hungerland, Vladimir Bačić, Luca Gerads, Fabian Schuhmann, Ilia A. Solov'yov, Journal of Chemical Information and Modeling, 63, 7518-7528, (2023)"
 tags: [publication]
 comments: false
 category: blog
