added denamo presentation

--- a/presentations/_posts/2023-01-13-Borstel.md
+++ b/presentations/_posts/2023-01-13-Borstel.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 excerpt: "Introducing SiMBols - Similarity Measures for Biological Systems" 
-title: "Oral and poster presentation at the 14th North German Biophysics Meeting in Borstel, Germany"
+title: "Talk and poster presentation at the 14th North German Biophysics Meeting in Borstel, Germany"
 tags: [presentation]
 category: presentation
 ---
