--- a/presentations/_posts/2023-03-01-SIAMCSE23.md
+++ b/presentations/_posts/2023-03-01-SIAMCSE23.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 excerpt: "The Same, But Different – Discovering Differences Between Neutrophil Elastase and Cathepsin G " 
-title: "Oral presentation at the SIAM CSE 2023 conference in Amsterdam, Netherlands"
+title: "Talk presentation at the SIAM CSE 2023 conference in Amsterdam, Netherlands"
 tags: [presentation]
 category: presentation
 ---
