--- a/presentations/_posts/2023-05-10-BioSB.md
+++ b/presentations/_posts/2023-05-10-BioSB.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 excerpt: "ALISE: An Improved And Automated Virtual Drug Screening Procedure" 
-title: "Oral presentation at the BioSB conference in Egmond aan Zee, Netherlands"
+title: "Talk at the BioSB conference in Egmond aan Zee, Netherlands"
 tags: [presentation]
 category: presentation
 ---
