updated publications and presentations

--- a/publications/_posts/2024-08-23-rosgc1.md
+++ b/publications/_posts/2024-08-23-rosgc1.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 title: "Allosteric Communication of the Dimerization and the Catalytic Domain in Photoreceptor Guanylate Cyclase"
-excerpt: "Manisha Kumari Shahu, Fabian Schuhmann, Siu Ying Wong, Ilia A. Solov’yov, and Karl-Wilhelm Koch, BioChemistry, XXX, XXX-XXX (2024)"
+excerpt: "Manisha Kumari Shahu, Fabian Schuhmann, Siu Ying Wong, Ilia A. Solov’yov, and Karl-Wilhelm Koch, BioChemistry, 63, 2131-2140 (2024)"
 tags: [publication]
 comments: false
 category: blog
