--- a/publications/_posts/2024-11-14-cgpigeon2.md
+++ b/publications/_posts/2024-11-14-cgpigeon2.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 title: "Cryptochrome magnetoreception: time course of photoactivation from non-equilibrium coarse-grained molecular dynamics"
-excerpt: "Jessica L. Ramsay, Fabian Schuhmann, Ilia A. Solov'yov, Daniel R. Kattnig, Computational and Structural Biotechnology Journal, XXX, XXX-XXX (2024)"
+excerpt: "Jessica L. Ramsay, Fabian Schuhmann, Ilia A. Solov'yov, Daniel R. Kattnig, Computational and Structural Biotechnology Journal, 26, 58-69 (2024)"
 tags: [publication]
 comments: false
 category: blog
