--- a/publications/_posts/2024-04-03-CGPigeon.md
+++ b/publications/_posts/2024-04-03-CGPigeon.md
@@ -8,8 +8,9 @@ category: blog
 ---
 
 <b>Abstract: </b>
-Cryptochrome is currently the major contender of a protein to underpin magnetoreception, the ability to sense the Earth’s magnetic field. Among various types of cryptochromes, cryptochrome 4 has been identified as the likely magnetoreceptor in migratory birds. All-atom molecular dynamics (MD) studies have offered first insights into the structural dynamics of cryptochrome but are limited to a short time scale due to large computational demands. Here, we employ coarse-grained MD simulations to investigate the emergence of long-lived states and conformational changes in pigeon cryptochrome 4. Our coarse-grained simulations complete the picture by permitting observation on a significantly longer time scale. We observe conformational transitions in the phosphate-binding loop of pigeon cryptochrome 4 upon activation and identify prominent motions in residues 440–460, suggesting a possible role as a signaling state of the protein or as a gated interaction site for forming protein complexes that might facilitate downstream processes. The findings highlight the importance of considering longer time scales in studying cryptochrome dynamics and magnetoreception. Coarse-grained MD simulations offer a valuable tool to unravel the complex behavior of cryptochrome proteins and shed new light on the mechanisms underlying their role in magnetoreception. Further exploration of these conformational changes and their functional implications may contribute to a deeper understanding of the molecular mechanisms of magnetoreception in birds.
-<a href="https://pubs.acs.org/doi/10.1021/acs.jpcb.4c00424">URL</a>
+Cryptochrome is currently the major contender of a protein to underpin magnetoreception, the ability to sense the Earth’s magnetic field. Among various types of cryptochromes, cryptochrome 4 has been identified as the likely magnetoreceptor in migratory birds. All-atom molecular dynamics (MD) studies have offered first insights into the structural dynamics of cryptochrome but are limited to a short time scale due to large computational demands. Here, we employ coarse-grained MD simulations to investigate the emergence of long-lived states and conformational changes in pigeon cryptochrome 4. Our coarse-grained simulations complete the picture by permitting observation on a significantly longer time scale. We observe conformational transitions in the phosphate-binding loop of pigeon cryptochrome 4 upon activation and identify prominent motions in residues 440–460, suggesting a possible role as a signaling state of the protein or as a gated interaction site for forming protein complexes that might facilitate downstream processes. The findings highlight the importance of considering longer time scales in studying cryptochrome dynamics and magnetoreception. Coarse-grained MD simulations offer a valuable tool to unravel the complex behavior of cryptochrome proteins and shed new light on the mechanisms underlying their role in magnetoreception. Further exploration of these conformational changes and their functional implications may contribute to a deeper understanding of the molecular mechanisms of magnetoreception in birds.<a href="https://pubs.acs.org/doi/10.1021/acs.jpcb.4c00424">URL</a>
+
+
 <a href="https://pubs.acs.org/doi/10.1021/acs.jpcb.4c00424">
   <img src="https://fabianschuhmann.github.io/images/jpcbfk.2024.128.issue-16.jpg" alt="Cover Art Journal of Physical Chemistry B April 2024">
   </a>
