updated journal info ts2cg

--- a/publications/_posts/2025-09-02-ts2cg-jctc.md
+++ b/publications/_posts/2025-09-02-ts2cg-jctc.md
@@ -1,7 +1,7 @@
 ---
 layout: news
 title: "TS2CG as a Membrane Builder"
-excerpt: "Fabian Schuhmann, Jan A. Stevens, Neda Rahmani, Isabell Lindahl, Chelsea M. Brown, Christopher Brasnett, Dimitrios Anastasiou, Adrià Bravo Vidal, Beatrice Geiger, Siewert J. Marrink, and Weria Pezeshkian, J. Chem. Theory Comput., XXXX, XXX-XXX (2025)"
+excerpt: "Fabian Schuhmann, Jan A. Stevens, Neda Rahmani, Isabell Lindahl, Chelsea M. Brown, Christopher Brasnett, Dimitrios Anastasiou, Adrià Bravo Vidal, Beatrice Geiger, Siewert J. Marrink, and Weria Pezeshkian, J. Chem. Theory Comput., 21, 9136-9146 (2025)"
 tags: [publication]
 comments: false
 category: blog
